Choosing name works